--- a/PrimerosPasos/bin/.gitignore
+++ b/PrimerosPasos/bin/.gitignore
@@ -1,2 +1,11 @@
 /eercicios/
 /ejercicios/
+/array/
+/bucleFor/
+/bucleWhile/
+/condicional/
+/entradaConsola/
+/funcion/
+/miPrimerPrograma/
+/variable/
+/variables/
