--- a/PrimerosPasos/bin/.gitignore
+++ b/PrimerosPasos/bin/.gitignore
@@ -1,11 +1,2 @@
-/eercicios/
-/ejercicios/
-/array/
-/bucleFor/
-/bucleWhile/
-/condicional/
-/entradaConsola/
-/funcion/
-/miPrimerPrograma/
-/variable/
-/variables/
+/Recursividad/
+/recursividad/
